--- a/assets/css/VerMais.css
+++ b/assets/css/VerMais.css
@@ -393,7 +393,7 @@ footer .div-email p{
         top: 70px;
         right: 0px;
         background-color: var(--primary-color);
-        z-index: 1000;
+        z-index: 1000000;
         height: 0px;
         visibility: hidden;
         overflow:hidden;
@@ -453,6 +453,7 @@ footer .div-email p{
 
 .div-mapa{
     width: 90%;
+    position: relative;
 }
 
 .div-sobre-texto p{
