--- a/assets/css/sobre.css
+++ b/assets/css/sobre.css
@@ -15,6 +15,10 @@
     font-family: 'ropa sans', serif,Arial, Helvetica, sans-serif;
 
 }
+body{
+    background-color: #eeeeee;
+    
+} 
 
 /* cabeçalho */
 .container-menu{
@@ -54,13 +58,22 @@
 }
 
 /* slogan */
-.section-titulo{
+
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .section-titulo h1{
     color: var(--primary-color);
     text-align: center;
+    margin-top: 130px;
+    font-size: 35px;
 }
-
+.section-titulo h2 , p{
+    margin-top: 20px;
+    margin-left: 10px;
+}
 /* informações */ 
 .section-info{
     display: flex;
@@ -73,10 +86,13 @@
     height: 300px;
     border-radius: var(--card-radius);
     margin: 30px;
+    text-align: justify;
+    padding: 15px;
 
 }
 .div-info h3{
     text-align: center;
+    margin-bottom: -15px;
 }
 .div-center{
     width: 100%;
@@ -98,6 +114,8 @@
 .div-especialidades{
     background-color: #00b4fc;
 }
+
+
 /* rodapé */
 
 footer{
@@ -207,11 +225,7 @@ footer .div-email p a{
 .div-info{
     width: 320px;
     height: 250px;
-    border-radius: var(--card-radius);
-    margin: 30px;
-    text-align: justify;
-    padding: 10px;
-
+   
 }
   /* Rodapé */
   footer h1{
