--- a/assets/css/VerMais.css
+++ b/assets/css/VerMais.css
@@ -8,7 +8,9 @@
   --button-radius:7px;
   --shadow:12px 12px 10px rgba(0,0,0,0.25);
 }
-
+html {
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0); 
+  }
 *{
     padding: 0;
     margin: 0;
@@ -391,9 +393,11 @@ footer .div-email p{
      .container-menu{
         justify-content: space-between;
       }    
-      .container-menu img{
-        width: 150px;
-      }    
+      .container-menu  img{
+        width: 80px;
+        margin-top: 25px;
+        margin-left: 20px;
+    }
      .menu{
         display: flex;
         flex-direction: column;
