--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,7 +218,7 @@ main{
     height: 1px;
     border: 2px solid black;
 }
-/* card*/
+/*card*/
 .section-card{
     display: flex;
     justify-content: center;
@@ -230,8 +230,8 @@ main{
     height: 450px;
     background-color: #fff;
     border-radius: 6px;
-    box-shadow: 0 1px 5px 1px rgba(0, 0,0, .3);
-    margin: 20px;
+    box-shadow: 0 1px 5px 1px rgba(0,0,0,.3);
+    margin: 40px;
 
 }
 .card-container:hover , .card-container:hover .button{
