--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@ body{
     position: fixed;
     width: 100%;
     height: 6rem;
-    background-color: #00285f;
+    background-color: var(--primary-color);
     z-index: 1000;
 }
 
@@ -228,7 +228,7 @@ main{
     
     width: 900px;
     height: 450px;
-    background-color: #fff;
+    background-color: var(--secundary-color);
     border-radius: 6px;
     box-shadow: 0 1px 5px 1px rgba(0,0,0,.3);
     margin: 40px;
@@ -237,25 +237,25 @@ main{
 .card-container:hover , .card-container:hover .button{
     transition: .3s ease;
       background-color:  #00285f;
-    color: #fff;
+    color: var(--secundary-color);
 }
 
 .card-container:hover .btn, .card-container:hover h4,.card-container:hover h3,.card-container:hover p{
     transition: .4s ease;
-    color: #fff;
+    color: var(--secundary-color);
 
 }
 .top{
     height: 100px;
     border-radius: 6px;
-    background-color:  #00285f;
+    background-color:  var(--primary-color);
     display: flex;
     justify-content: center;
 
 }
   /* imagem*/
 .image-container{
-    background-color: #fff;
+    background-color: var(--secundary-color);
     width: 150px;
     height: 150px;
     padding: 5px;
@@ -266,7 +266,7 @@ main{
 
 }
 .image-container img{
-    background-color: #fff;
+    background-color: var(--secundary-color);
     width: 100%;
     height: 100%;
     border-radius: 50%;
@@ -279,17 +279,16 @@ main{
 } 
 /* endereço e horario */
 .button{
-    background-color: #fff;
+    background-color: var(--secundary-color);
     padding: 20px;
     padding-top: 60px;
     text-align: center;
 }
 
 
-
 .btn{
     background: none;
-    color: #00285f;
+    color: var(--primary-color);
     font-size: 0.9rem;
     text-decoration: none;
     text-transform: uppercase;
@@ -298,7 +297,7 @@ main{
     border-radius: 30px;
 }
 .btn:hover{
-    border: 1px solid #fff;
+    border: 1px solid var(--secundary-color);
 
 }
    /* nome */
@@ -546,10 +545,10 @@ footer .div-email p a{
         transform: rotate(135deg);
   }
 
-  #nav.active .hamburger::after{
+         #nav.active .hamburger::after{
         transform: rotate(-135deg);
         top: -7px;
-}
+    }
 
            /* section slogan */
      
@@ -692,7 +691,7 @@ footer .div-email p a{
    
 
 }
-  /* button ver mais */
+         /* button ver mais */
         
         .div-ver-mais .div-button-ver-mais{   
             width: 120px;
